# mesh_simplify

./: .gitignore  CMakeLists.txt  LICENSE  README.md  strcture.md
src/: CMakeLists.txt  main.cpp  test.cpp
src/core/: CMakeLists.txt  Core.h  Edge.cpp  Edge.h  Face.cpp  Face.h  Matrix.h  Q_Matrix.cpp  Q_Matrix.h  Q_matrix.cpp  Q_matrix.h  Vec.h  Vertex.cpp  Vertex.h  core.h
src/parse/: CMakeLists.txt  Parse.cpp  parse.cpp  parse.h
src/simplify/: CMakeLists.txt  Simplify.cpp  Simplify.h  simplify.cpp  simplify.h
